2007-11-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c (igraph_arpack_rssolve) : fix vector copy bug
	
	* src/community.c (igraph_community_leading_eigenvector_naive) : 
	updated for igraph_arpack_storage_init changes
	* src/arpack.c (igraph_arpack_options_init) : updated, default problem
	type is specified via 'XX', added 'sigmai', lworkl is by default 0
	(igraph_arpack_storage_init) : added 'symm' option
	(igraph_arpack_storage_destroy) : handle new members
	(igraph_arpack_rssolve) : handle 'XX' problem type
	(igraph_arpack_rnsolve) : added
	* src/centrality.c (igraph_i_pagerank) : correct, divide by n
	(igraph_pagerank) : update to use rnsolve instead of rssolve
	
	* src/arpack/dlaqrb.c
	* src/arpack/dnaitr.c
	* src/arpack/dnapps.c
	* src/arpack/dnaup2.c
	* src/arpack/dnaupd.c
	* src/arpack/dnconv.c
	* src/arpack/dneigh.c
	* src/arpack/dneupd.c
	* src/arpack/dngets.c
	* src/arpack/dsortc.c
	* src/arpack/dstatn.c
	* src/blas/dasum.c
	* src/blas/drot.c
	* src/blas/dtrmm.c
	* src/blas/idamax.c
	* src/f2c/d_lg10.c
	* src/f2c/i_dnnt.c
	* src/lapack/dlabad.c
	* src/lapack/dlacon.c
	* src/lapack/dladiv.c
	* src/lapack/dlaexc.c
	* src/lapack/dlahqr.c
	* src/lapack/dlaln2.c
	* src/lapack/dlange.c
	* src/lapack/dlanhs.c
	* src/lapack/dlanv2.c
	* src/lapack/dlarfx.c
	* src/lapack/dlasy2.c
	* src/lapack/dtrevc.c
	* src/lapack/dtrexc.c
	* src/lapack/dtrsen.c
	* src/lapack/dtrsyl.c : added stuff required for non-symmetric
	sparse eigenproblems	

2007-11-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : added

	* src/structural_properties.c (igraph_pagerank, igraph_pagerank_old) :
	renamed
	* examples/simple/igraph_pagerank.c : updated

	* src/cliques.c (igraph_i_maximal_or_largest_cliques_or_indsets) : 
	give prototype

	* src/community.c (igraph_i_community_leading_eigenvector_naive) : added
	(igraph_community_leading_eigenvector_naive) : rewritten to call rssolve

	* src/arpack.c (igraph_arpack_init) : remove storage part